--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,13 @@
     <title>Home</title>
 </head>
 <body>
+<a href="/">All</a>
+<a href="/?category=Alcohol">Alcohol</a>
+<a href="/?category=Furniture">Furniture</a>
+<a href="/?category=Toiletries">Toiletries</a>
+<a href="/?category=Shoes">Shoes</a>
+<a href="/?category=Food">Food</a>
+<a href="/?category=Jewelry">Jewelry</a>
 
 <table>
     <tr>
@@ -16,16 +23,16 @@
         <th>Date</th>
     </tr>
     {{#purchases}}
-    {{#customers}}
     <tr>
+        {{#customer}}
         <td>{{name}}</td>
         <td>{{email}}</td>
+        {{/customer}}
         <td>{{category}}</td>
         <td>{{creditcard}}</td>
         <td>{{cvv}}</td>
         <td>{{date}}</td>
     </tr>
-    {{/customers}}
     {{/purchases}}
 </table>
 
