--- a/Purchases/src/main/resources/templates/home.html
+++ b/Purchases/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 <a href="/?category=Shoes">Shoes</a>
 <a href="/?category=Food">Food</a>
 <a href="/?category=Jewelry">Jewelry</a>
-<table border="0">
+<table border="1" cellpadding="3">
     <tr>
         <th>Name</th>
         <th>Email</th>
