--- a/Purchases/src/main/resources/templates/home.html
+++ b/Purchases/src/main/resources/templates/home.html
@@ -4,12 +4,12 @@
     <br>
 
     <a href="/">All</a>
-    <a href="/?category=Alcohol">Alcohol\s</a>
-    <a href="/?category=Furniture">Furniture\s</a>
-    <a href="/?category=Toiletries">Toiletries\s</a>
-    <a href="/?category=Jewelry">Jewelry\s</a>
-    <a href="/?category=Shoes">Shoes\s</a>
-    <a href="/?category=Food">Food\s</a>
+    <a href="/?category=Alcohol"> Alcohol </a>
+    <a href="/?category=Furniture"> Furniture </a>
+    <a href="/?category=Toiletries"> Toiletries </a>
+    <a href="/?category=Jewelry"> Jewelry </a>
+    <a href="/?category=Shoes"> Shoes </a>
+    <a href="/?category=Food"> Food </a>
     <br>
 
     <tr>
